parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Program Cuerpo
Rule 2     epsilon -> <empty>
Rule 3     Boolean -> False
Rule 4     Boolean -> True
Rule 5     id -> ID
Rule 6     Strings -> String
Rule 7     Numeros -> Number
Rule 8     Asignacion_Conj -> id Equal Llave_Abre Llave_Cierra
Rule 9     Asignacion_Conj -> id Equal Llave_Abre ListaNumeros Llave_Cierra
Rule 10    Aux_ListaNumeros -> Numeros
Rule 11    Aux_ListaNumeros -> Expresion
Rule 12    ListaNumeros -> Aux_ListaNumeros
Rule 13    ListaNumeros -> ListaNumeros Coma Aux_ListaNumeros
Rule 14    Asignacion -> id Equal Expresion
Rule 15    Scaneo -> Scan id
Rule 16    PrintLneo -> PrintLn ListaComa
Rule 17    Printeo -> Print ListaComa
Rule 18    TipoImpresion -> Strings
Rule 19    TipoImpresion -> Expresion
Rule 20    ListaComa -> TipoImpresion
Rule 21    ListaComa -> ListaComa Coma TipoImpresion
Rule 22    Instruccion_Type -> Asignacion
Rule 23    Instruccion_Type -> Bloque
Rule 24    Instruccion_Type -> Asignacion_Conj
Rule 25    Instruccion_Type -> Condicion
Rule 26    Instruccion_Type -> Ciclo_For
Rule 27    Instruccion_Type -> Ciclo_Repeat1
Rule 28    Instruccion_Type -> Ciclo_Repeat2
Rule 29    Instruccion_Type -> Ciclo_Repeat3
Rule 30    Instruccion1 -> Instruccion_Type
Rule 31    Instruccion1 -> Printeo
Rule 32    Instruccion1 -> PrintLneo
Rule 33    Instruccion1 -> Scaneo
Rule 34    Instruccion2_Base -> Instruccion_Type Pto_Coma
Rule 35    Instruccion2_Base -> Printeo Pto_Coma
Rule 36    Instruccion2_Base -> PrintLneo Pto_Coma
Rule 37    Instruccion2_Base -> Scaneo Pto_Coma
Rule 38    Instruccion2_Base -> Ciclo_Repeat3 Pto_Coma
Rule 39    Instruccion2_Base -> Ciclo_Repeat1 Pto_Coma
Rule 40    Instruccion2 -> Instruccion2_Base
Rule 41    Instruccion2 -> Instruccion2 Instruccion2_Base
Rule 42    ListaVariables -> Aux_ListaVariables
Rule 43    ListaVariables -> ListaVariables Coma Aux_ListaVariables
Rule 44    Aux_ListaVariables -> id
Rule 45    Lista_Declaracion_Base -> Type ListaVariables Pto_Coma
Rule 46    Lista_Declaracion_Base -> Type id Equal Expresion Pto_Coma
Rule 47    Lista_Declaracion -> Lista_Declaracion_Base
Rule 48    Lista_Declaracion -> Lista_Declaracion Lista_Declaracion_Base
Rule 49    Declaracion -> Using Lista_Declaracion In
Rule 50    Declaracion -> Using In
Rule 51    Declaracion -> epsilon
Rule 52    Type -> Set
Rule 53    Type -> Bool
Rule 54    Type -> Int
Rule 55    Bloque -> Llave_Abre Declaracion Llave_Cierra
Rule 56    Bloque -> Llave_Abre Declaracion Instruccion2 Llave_Cierra
Rule 57    Cuerpo -> Instruccion1
Rule 58    Cuerpo -> Bloque
Rule 59    Condicion -> If Par_Abre Expresion Par_Cierra Cuerpo
Rule 60    Condicion -> If Par_Abre Expresion Par_Cierra Cuerpo Condicion_Else_If
Rule 61    Condicion_Else -> Else Cuerpo
Rule 62    Condicion_Else_If -> ElseIf Par_Abre Expresion Par_Cierra Cuerpo
Rule 63    Condicion_Else_If -> ElseIf Par_Abre Expresion Par_Cierra Cuerpo Condicion_Else_If
Rule 64    Condicion_Else_If -> Condicion_Else
Rule 65    Ciclo_For -> For id Direccion id Do Cuerpo
Rule 66    Ciclo_For -> For id Direccion Expresion Do Cuerpo
Rule 67    Ciclo_For -> For id Direccion Llave_Abre ListaNumeros Llave_Cierra Do Cuerpo
Rule 68    Direccion -> Min
Rule 69    Direccion -> Max
Rule 70    Ciclo_Repeat1 -> Repeat Instruccion1 While Par_Abre Expresion Par_Cierra Do Instruccion1
Rule 71    Ciclo_Repeat2 -> While Par_Abre Expresion Par_Cierra Do Bloque
Rule 72    Ciclo_Repeat3 -> Repeat Bloque While Par_Abre Expresion Par_Cierra
Rule 73    Expresion -> Boolean
Rule 74    Expresion -> Numeros
Rule 75    Expresion -> id
Rule 76    Expresion -> Llave_Abre ListaNumeros Llave_Cierra
Rule 77    Expresion -> Llave_Abre Llave_Cierra
Rule 78    Expresion -> Par_Abre Expresion Par_Cierra
Rule 79    Expresion -> Not Expresion
Rule 80    Expresion -> Resta Expresion
Rule 81    Expresion -> MaxConj Expresion
Rule 82    Expresion -> MinConj Expresion
Rule 83    Expresion -> NumElemConj Expresion
Rule 84    Expresion -> Expresion Suma Expresion
Rule 85    Expresion -> Expresion Resta Expresion
Rule 86    Expresion -> Expresion Mult Expresion
Rule 87    Expresion -> Expresion Div Expresion
Rule 88    Expresion -> Expresion Mod Expresion
Rule 89    Expresion -> Expresion Union Expresion
Rule 90    Expresion -> Expresion Dif Expresion
Rule 91    Expresion -> Expresion Inter Expresion
Rule 92    Expresion -> Expresion SumaConj Expresion
Rule 93    Expresion -> Expresion Or Expresion
Rule 94    Expresion -> Expresion And Expresion
Rule 95    Expresion -> Expresion RestaConj Expresion
Rule 96    Expresion -> Expresion MultConj Expresion
Rule 97    Expresion -> Expresion DivConj Expresion
Rule 98    Expresion -> Expresion ModConj Expresion
Rule 99    Expresion -> Expresion Equiv Expresion
Rule 100   Expresion -> Expresion Greater Expresion
Rule 101   Expresion -> Expresion Less Expresion
Rule 102   Expresion -> Expresion GreaterEqual Expresion
Rule 103   Expresion -> Expresion LessEqual Expresion
Rule 104   Expresion -> Expresion IsInConj Expresion
Rule 105   Expresion -> Expresion NotEquiv Expresion

Terminals, with rules where they appear

And                  : 94
Bool                 : 53
Coma                 : 13 21 43
Dif                  : 90
Div                  : 87
DivConj              : 97
Do                   : 65 66 67 70 71
Else                 : 61
ElseIf               : 62 63
Equal                : 8 9 14 46
Equiv                : 99
False                : 3
For                  : 65 66 67
Greater              : 100
GreaterEqual         : 102
ID                   : 5
If                   : 59 60
In                   : 49 50
Int                  : 54
Inter                : 91
IsInConj             : 104
Less                 : 101
LessEqual            : 103
Llave_Abre           : 8 9 55 56 67 76 77
Llave_Cierra         : 8 9 55 56 67 76 77
Max                  : 69
MaxConj              : 81
Min                  : 68
MinConj              : 82
Mod                  : 88
ModConj              : 98
Mult                 : 86
MultConj             : 96
Not                  : 79
NotEquiv             : 105
NumElemConj          : 83
Number               : 7
Or                   : 93
Par_Abre             : 59 60 62 63 70 71 72 78
Par_Cierra           : 59 60 62 63 70 71 72 78
Print                : 17
PrintLn              : 16
Program              : 1
Pto_Coma             : 34 35 36 37 38 39 45 46
Repeat               : 70 72
Resta                : 80 85
RestaConj            : 95
Scan                 : 15
Set                  : 52
String               : 6
Suma                 : 84
SumaConj             : 92
True                 : 4
Union                : 89
Using                : 49 50
While                : 70 71 72
error                : 

Nonterminals, with rules where they appear

Asignacion           : 22
Asignacion_Conj      : 24
Aux_ListaNumeros     : 12 13
Aux_ListaVariables   : 42 43
Bloque               : 23 58 71 72
Boolean              : 73
Ciclo_For            : 26
Ciclo_Repeat1        : 27 39
Ciclo_Repeat2        : 28
Ciclo_Repeat3        : 29 38
Condicion            : 25
Condicion_Else       : 64
Condicion_Else_If    : 60 63
Cuerpo               : 1 59 60 61 62 63 65 66 67
Declaracion          : 55 56
Direccion            : 65 66 67
Expresion            : 11 14 19 46 59 60 62 63 66 70 71 72 78 79 80 81 82 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105
Instruccion1         : 57 70 70
Instruccion2         : 41 56
Instruccion2_Base    : 40 41
Instruccion_Type     : 30 34
ListaComa            : 16 17 21
ListaNumeros         : 9 13 67 76
ListaVariables       : 43 45
Lista_Declaracion    : 48 49
Lista_Declaracion_Base : 47 48
Numeros              : 10 74
PrintLneo            : 32 36
Printeo              : 31 35
Programa             : 0
Scaneo               : 33 37
Strings              : 18
TipoImpresion        : 20 21
Type                 : 45 46
epsilon              : 51
id                   : 8 9 14 15 44 46 65 65 66 67 75

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Program Cuerpo

    Program         shift and go to state 1

    Programa                       shift and go to state 2

state 1

    (1) Programa -> Program . Cuerpo
    (57) Cuerpo -> . Instruccion1
    (58) Cuerpo -> . Bloque
    (30) Instruccion1 -> . Instruccion_Type
    (31) Instruccion1 -> . Printeo
    (32) Instruccion1 -> . PrintLneo
    (33) Instruccion1 -> . Scaneo
    (55) Bloque -> . Llave_Abre Declaracion Llave_Cierra
    (56) Bloque -> . Llave_Abre Declaracion Instruccion2 Llave_Cierra
    (22) Instruccion_Type -> . Asignacion
    (23) Instruccion_Type -> . Bloque
    (24) Instruccion_Type -> . Asignacion_Conj
    (25) Instruccion_Type -> . Condicion
    (26) Instruccion_Type -> . Ciclo_For
    (27) Instruccion_Type -> . Ciclo_Repeat1
    (28) Instruccion_Type -> . Ciclo_Repeat2
    (29) Instruccion_Type -> . Ciclo_Repeat3
    (17) Printeo -> . Print ListaComa
    (16) PrintLneo -> . PrintLn ListaComa
    (15) Scaneo -> . Scan id
    (14) Asignacion -> . id Equal Expresion
    (8) Asignacion_Conj -> . id Equal Llave_Abre Llave_Cierra
    (9) Asignacion_Conj -> . id Equal Llave_Abre ListaNumeros Llave_Cierra
    (59) Condicion -> . If Par_Abre Expresion Par_Cierra Cuerpo
    (60) Condicion -> . If Par_Abre Expresion Par_Cierra Cuerpo Condicion_Else_If
    (65) Ciclo_For -> . For id Direccion id Do Cuerpo
    (66) Ciclo_For -> . For id Direccion Expresion Do Cuerpo
    (67) Ciclo_For -> . For id Direccion Llave_Abre ListaNumeros Llave_Cierra Do Cuerpo
    (70) Ciclo_Repeat1 -> . Repeat Instruccion1 While Par_Abre Expresion Par_Cierra Do Instruccion1
    (71) Ciclo_Repeat2 -> . While Par_Abre Expresion Par_Cierra Do Bloque
    (72) Ciclo_Repeat3 -> . Repeat Bloque While Par_Abre Expresion Par_Cierra
    (5) id -> . ID

    Llave_Abre      shift and go to state 18
    Print           shift and go to state 6
    PrintLn         shift and go to state 12
    Scan            shift and go to state 22
    If              shift and go to state 26
    For             shift and go to state 4
    Repeat          shift and go to state 8
    While           shift and go to state 19
    ID              shift and go to state 20

    Ciclo_For                      shift and go to state 3
    Condicion                      shift and go to state 5
    id                             shift and go to state 7
    Printeo                        shift and go to state 9
    PrintLneo                      shift and go to state 10
    Cuerpo                         shift and go to state 11
    Ciclo_Repeat3                  shift and go to state 13
    Ciclo_Repeat2                  shift and go to state 14
    Ciclo_Repeat1                  shift and go to state 15
    Asignacion                     shift and go to state 16
    Scaneo                         shift and go to state 17
    Instruccion_Type               shift and go to state 21
    Asignacion_Conj                shift and go to state 23
    Instruccion1                   shift and go to state 24
    Bloque                         shift and go to state 25

state 2

    (0) S' -> Programa .



state 3

    (26) Instruccion_Type -> Ciclo_For .

    While           reduce using rule 26 (Instruccion_Type -> Ciclo_For .)
    Pto_Coma        reduce using rule 26 (Instruccion_Type -> Ciclo_For .)
    $end            reduce using rule 26 (Instruccion_Type -> Ciclo_For .)
    ElseIf          reduce using rule 26 (Instruccion_Type -> Ciclo_For .)
    Else            reduce using rule 26 (Instruccion_Type -> Ciclo_For .)


state 4

    (65) Ciclo_For -> For . id Direccion id Do Cuerpo
    (66) Ciclo_For -> For . id Direccion Expresion Do Cuerpo
    (67) Ciclo_For -> For . id Direccion Llave_Abre ListaNumeros Llave_Cierra Do Cuerpo
    (5) id -> . ID

    ID              shift and go to state 20

    id                             shift and go to state 27

state 5

    (25) Instruccion_Type -> Condicion .

    While           reduce using rule 25 (Instruccion_Type -> Condicion .)
    Pto_Coma        reduce using rule 25 (Instruccion_Type -> Condicion .)
    $end            reduce using rule 25 (Instruccion_Type -> Condicion .)
    ElseIf          reduce using rule 25 (Instruccion_Type -> Condicion .)
    Else            reduce using rule 25 (Instruccion_Type -> Condicion .)


state 6

    (17) Printeo -> Print . ListaComa
    (20) ListaComa -> . TipoImpresion
    (21) ListaComa -> . ListaComa Coma TipoImpresion
    (18) TipoImpresion -> . Strings
    (19) TipoImpresion -> . Expresion
    (6) Strings -> . String
    (73) Expresion -> . Boolean
    (74) Expresion -> . Numeros
    (75) Expresion -> . id
    (76) Expresion -> . Llave_Abre ListaNumeros Llave_Cierra
    (77) Expresion -> . Llave_Abre Llave_Cierra
    (78) Expresion -> . Par_Abre Expresion Par_Cierra
    (79) Expresion -> . Not Expresion
    (80) Expresion -> . Resta Expresion
    (81) Expresion -> . MaxConj Expresion
    (82) Expresion -> . MinConj Expresion
    (83) Expresion -> . NumElemConj Expresion
    (84) Expresion -> . Expresion Suma Expresion
    (85) Expresion -> . Expresion Resta Expresion
    (86) Expresion -> . Expresion Mult Expresion
    (87) Expresion -> . Expresion Div Expresion
    (88) Expresion -> . Expresion Mod Expresion
    (89) Expresion -> . Expresion Union Expresion
    (90) Expresion -> . Expresion Dif Expresion
    (91) Expresion -> . Expresion Inter Expresion
    (92) Expresion -> . Expresion SumaConj Expresion
    (93) Expresion -> . Expresion Or Expresion
    (94) Expresion -> . Expresion And Expresion
    (95) Expresion -> . Expresion RestaConj Expresion
    (96) Expresion -> . Expresion MultConj Expresion
    (97) Expresion -> . Expresion DivConj Expresion
    (98) Expresion -> . Expresion ModConj Expresion
    (99) Expresion -> . Expresion Equiv Expresion
    (100) Expresion -> . Expresion Greater Expresion
    (101) Expresion -> . Expresion Less Expresion
    (102) Expresion -> . Expresion GreaterEqual Expresion
    (103) Expresion -> . Expresion LessEqual Expresion
    (104) Expresion -> . Expresion IsInConj Expresion
    (105) Expresion -> . Expresion NotEquiv Expresion
    (3) Boolean -> . False
    (4) Boolean -> . True
    (7) Numeros -> . Number
    (5) id -> . ID

    String          shift and go to state 33
    Llave_Abre      shift and go to state 37
    Par_Abre        shift and go to state 28
    Not             shift and go to state 39
    Resta           shift and go to state 40
    MaxConj         shift and go to state 32
    MinConj         shift and go to state 30
    NumElemConj     shift and go to state 42
    False           shift and go to state 43
    True            shift and go to state 34
    Number          shift and go to state 44
    ID              shift and go to state 20

    Expresion                      shift and go to state 35
    Numeros                        shift and go to state 29
    TipoImpresion                  shift and go to state 36
    id                             shift and go to state 31
    ListaComa                      shift and go to state 38
    Boolean                        shift and go to state 45
    Strings                        shift and go to state 41

state 7

    (14) Asignacion -> id . Equal Expresion
    (8) Asignacion_Conj -> id . Equal Llave_Abre Llave_Cierra
    (9) Asignacion_Conj -> id . Equal Llave_Abre ListaNumeros Llave_Cierra

    Equal           shift and go to state 46


state 8

    (70) Ciclo_Repeat1 -> Repeat . Instruccion1 While Par_Abre Expresion Par_Cierra Do Instruccion1
    (72) Ciclo_Repeat3 -> Repeat . Bloque While Par_Abre Expresion Par_Cierra
    (30) Instruccion1 -> . Instruccion_Type
    (31) Instruccion1 -> . Printeo
    (32) Instruccion1 -> . PrintLneo
    (33) Instruccion1 -> . Scaneo
    (55) Bloque -> . Llave_Abre Declaracion Llave_Cierra
    (56) Bloque -> . Llave_Abre Declaracion Instruccion2 Llave_Cierra
    (22) Instruccion_Type -> . Asignacion
    (23) Instruccion_Type -> . Bloque
    (24) Instruccion_Type -> . Asignacion_Conj
    (25) Instruccion_Type -> . Condicion
    (26) Instruccion_Type -> . Ciclo_For
    (27) Instruccion_Type -> . Ciclo_Repeat1
    (28) Instruccion_Type -> . Ciclo_Repeat2
    (29) Instruccion_Type -> . Ciclo_Repeat3
    (17) Printeo -> . Print ListaComa
    (16) PrintLneo -> . PrintLn ListaComa
    (15) Scaneo -> . Scan id
    (14) Asignacion -> . id Equal Expresion
    (8) Asignacion_Conj -> . id Equal Llave_Abre Llave_Cierra
    (9) Asignacion_Conj -> . id Equal Llave_Abre ListaNumeros Llave_Cierra
    (59) Condicion -> . If Par_Abre Expresion Par_Cierra Cuerpo
    (60) Condicion -> . If Par_Abre Expresion Par_Cierra Cuerpo Condicion_Else_If
    (65) Ciclo_For -> . For id Direccion id Do Cuerpo
    (66) Ciclo_For -> . For id Direccion Expresion Do Cuerpo
    (67) Ciclo_For -> . For id Direccion Llave_Abre ListaNumeros Llave_Cierra Do Cuerpo
    (70) Ciclo_Repeat1 -> . Repeat Instruccion1 While Par_Abre Expresion Par_Cierra Do Instruccion1
    (71) Ciclo_Repeat2 -> . While Par_Abre Expresion Par_Cierra Do Bloque
    (72) Ciclo_Repeat3 -> . Repeat Bloque While Par_Abre Expresion Par_Cierra
    (5) id -> . ID

    Llave_Abre      shift and go to state 18
    Print           shift and go to state 6
    PrintLn         shift and go to state 12
    Scan            shift and go to state 22
    If              shift and go to state 26
    For             shift and go to state 4
    Repeat          shift and go to state 8
    While           shift and go to state 19
    ID              shift and go to state 20

    Ciclo_For                      shift and go to state 3
    Condicion                      shift and go to state 5
    id                             shift and go to state 7
    Printeo                        shift and go to state 9
    PrintLneo                      shift and go to state 10
    Ciclo_Repeat3                  shift and go to state 13
    Ciclo_Repeat2                  shift and go to state 14
    Ciclo_Repeat1                  shift and go to state 15
    Asignacion                     shift and go to state 16
    Scaneo                         shift and go to state 17
    Instruccion_Type               shift and go to state 21
    Asignacion_Conj                shift and go to state 23
    Instruccion1                   shift and go to state 47
    Bloque                         shift and go to state 48

state 9

    (31) Instruccion1 -> Printeo .

    ElseIf          reduce using rule 31 (Instruccion1 -> Printeo .)
    Else            reduce using rule 31 (Instruccion1 -> Printeo .)
    $end            reduce using rule 31 (Instruccion1 -> Printeo .)
    While           reduce using rule 31 (Instruccion1 -> Printeo .)
    Pto_Coma        reduce using rule 31 (Instruccion1 -> Printeo .)


state 10

    (32) Instruccion1 -> PrintLneo .

    ElseIf          reduce using rule 32 (Instruccion1 -> PrintLneo .)
    Else            reduce using rule 32 (Instruccion1 -> PrintLneo .)
    $end            reduce using rule 32 (Instruccion1 -> PrintLneo .)
    While           reduce using rule 32 (Instruccion1 -> PrintLneo .)
    Pto_Coma        reduce using rule 32 (Instruccion1 -> PrintLneo .)


state 11

    (1) Programa -> Program Cuerpo .

    $end            reduce using rule 1 (Programa -> Program Cuerpo .)


state 12
